clientes y cambios de marca

--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -150,7 +150,7 @@
                         </div>
                         <!--Footer del modal-->
                         <div class="modal-footer d-flex justify-content-center">
-                            <button type="button" id="cancelarBtn" class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular">
+                            <button type="button" id="cancelarBtn" class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular" onclick="botonCancelar()">
                                 Cancelar
                             </button>
                             <button type="button" id="actualizarBtn" class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular" onclick="botonActualizar()">
