--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -137,18 +137,18 @@
                             <!-- Campo oculto para asignar el id del registro al momento de modificar
                             <input type="hidden" id="idTrabajador" name="IdTrabajador"> -->
                             <div class="col-sm-12 col-md-6">
-                                <label for="nombreMarca" class="form-label">Nombre Marca</label>
-                                <input id="nombreMarca" type="text" name="nombreMarca"
+                                <label for="nombreMarcaD" class="form-label">Nombre Marca</label>
+                                <input id="nombreMarcaD" type="text" name="nombreMarcaD"
                                     class="form-control editableInput" required disabled>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <label for="fotoMarca" class="form-label">Foto Marca</label>
-                                <input id="fotoMarca" type="text" name="fotoMarca"
+                                <label for="fotoMarcaD" class="form-label">Foto Marca</label>
+                                <input id="fotoMarcaD" type="text" name="fotoMarcaD"
                                     class="form-control editableInput" required disabled>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <label for="descripcionMarca" class="form-label">Descripciòn</label>
-                                <input id="descripcionMarca" type="text" name="descripcionMarca"
+                                <label for="descripcionMarcaD" class="form-label">Descripciòn</label>
+                                <input id="descripcionMarcaD" type="text" name="descripcionMarcaD"
                                     class="form-control editableInput" required disabled>
                             </div>
                         </div>
