--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -166,11 +166,12 @@
 
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
-    <script type="text/javascript" src="../../controlador/privado/cliente.js"></script>
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- *Llamada al controlador de la página web -->
+    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/privado/cliente.js"></script>
 </body>
 
 </html>
