Detalle Comentario casi terminado

--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -37,14 +37,14 @@
             <div class="container">
                 <!--div contenedor del texto de comentarios y linea-->
                 <div class="contenidoP">
-                    <div class="rectanguloP z-0">
+                    <div class="rectanguloP z-0 d-none ">
                         <div class="comentario mt-1">
                             <div class="ComentarioC">
-                                <a href="paginaxd" class="a">
-                                <h5 class="comentarioT">Emilianito</h5>
-                                <p class="comentarioD">El mejor pollo, es del pollo campero!
-                                </p>
-                            </a>
+                                <a href="dcomentario.html" class="a">
+                                    <h5 class="comentarioT">Emilianito</h5>
+                                    <p class="comentarioD">El mejor pollo, es del pollo campero!
+                                    </p>
+                                </a>
                             </div>
                             <div class="sizedbox"></div>
                             <div class="ComentarioC">
@@ -59,15 +59,38 @@
                                 </p>
                             </div>
                             <div class="sizedbox"></div>
-                        <div class="ComentarioC">
-                            <h5 class="comentarioT">Emilianito</h5>
-                            <p class="comentarioD">El mejor pollo, es del pollo campero!
-                            </p>
+                            <div class="ComentarioC">
+                                <h5 class="comentarioT">Emilianito</h5>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!
+                                </p>
+                            </div>
                         </div>
-                        </div>
-                        
                     </div>
-
+                    <div class="rectanguloP1 z-0 position-absolute top-50 start-50 translate-middle ">  
+                        <h3 class="InfoC fw-normal">Información del comentario</h3>
+                        <p class="C1 titillium-web-regular">
+                            <span class="fw-bold">
+                                Nombre del cliente:
+                            </span> Emilianito
+                        </p>
+                        <p class="C2 titillium-web-regular">
+                            <span class="fw-bold">
+                                Correo del cliente:
+                            </span>
+                            Emilianito@gmail.com
+                        </p>
+                        <p class="C3 titillium-web-regular">
+                            <span class="fw-bold">
+                                Teléfono del cliente:
+                            </span>
+                            1234-5678
+                        </p>
+                    <div class ="ComentarioDetalle "> 
+                        <h8 class="CT1 titillium-web-semibold">Descripcion del comentario:</h8>
+                        <p class ="Comentario "> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es muy comodo, lo recomiendo para 
+                            fiestas por que es muy elegante.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
