--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -101,9 +101,9 @@
                                                             Pedido N# 4322</p>
                                                     </div>
                                                     <div id="contenedorDelAcordionSoloHeaderAndBody">
-                                                        <div class="col-lg-12 container mt-3 d-flex flex-nowrap" id="detallesDelPedido">
+                                                        <div class="col-lg-12 container mt-3 d-flex flex-wrap m-3 justify-content-center align-items-center" id="detallesDelPedido">
                                                             <!--Comienzo de cards-->
-                                                            <div class="containerCards col-lg-4 d-flex flex-wrap">
+                                                            <div class="containerCards col-lg-3 d-flex flex-wrap m-3">
                                                                 <div class="containerCard col-lg-12 flex-wrap" id="cardPedido">
                                                                     <div class="card">
                                                                         <img src="../../recursos/imagenes/sneakersExample.svg" class="card-img-top img-fluid" alt="Imagen de zapato">
@@ -140,43 +140,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="containerCards col-lg-4 d-flex flex-wrap m-1">
-                                                                <div class="containerCard col-lg-12 flex-wrap" id="cardPedido">
-                                                                    <div class="card">
-                                                                        <img src="../../recursos/imagenes/sneakersExample.svg" class="card-img-top img-fluid" alt="Imagen de zapato">
-                                                                        <div class="card-body">
-                                                                            <div class="ContenedorNombreZapato col-lg-12">
-                                                                                <h4 class="titillium-web-semibold text-center" id="nombreZapato" >Nike Air Force 1'07</h4>
-                                                                            </div>
-                                                                            <div class="ContenedorColorTalla col-lg-12 d-flex">
-                                                                                <div class="col-lg-6 d-flex mt-3 justify-content-center align-items-center" id="contenedorColor">
-                                                                                    <h6 class="titillium-web-extralight me-1">Color</h6>
-                                                                                    <div id="color" class="mb-2"></div>
-                                                                                </div>
-                                                                                <div class="col-lg-6 d-flex mt-3 justify-content-center align-items-center" id="contenedorTalla">
-                                                                                    <h6 class="titillium-web-extralight me-1">Talla</h6>
-                                                                                    <div id="talla">
-                                                                                        <h6 id="tallaPedido">32</h6>
-                                                                                    </div>
-                                                                                </div>
-                                                                            </div>
-                                                                            <div class="contenedorCantidad col-lg-12 justify-content-center align-items-center mt-2">
-                                                                                <h6 class="titillium-web-extralight text-center" id="cantidadPedido">Cantidad: 12</h6>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="card-footer bg-color-4blue">
-                                                                            <div class="d-flex contenedorPrecios col-lg-12">
-                                                                                <div class="col-lg-6 d-flex justify-content-start">
-                                                                                    <h6 class="titillium-web-bold text-white"  id="precioZapato">$120</h6>
-                                                                                </div>
-                                                                                <div class="col-lg-6 d-flex justify-content-end">
-                                                                                    <h6 class="titillium-web-extralight text-white" id="cantidadTotal">Total: $1,440</h6>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div><div class="containerCards col-lg-4 d-flex flex-wrap">
+                                                            <div class="containerCards col-lg-3 d-flex flex-wrap m-3">
                                                                 <div class="containerCard col-lg-12 flex-wrap" id="cardPedido">
                                                                     <div class="card">
                                                                         <img src="../../recursos/imagenes/sneakersExample.svg" class="card-img-top img-fluid" alt="Imagen de zapato">
@@ -213,29 +177,60 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                            <div class="containerCards col-lg-3 d-flex flex-wrap m-3">
+                                                                <div class="containerCard col-lg-12 flex-wrap" id="cardPedido">
+                                                                    <div class="card">
+                                                                        <img src="../../recursos/imagenes/sneakersExample.svg" class="card-img-top img-fluid" alt="Imagen de zapato">
+                                                                        <div class="card-body">
+                                                                            <div class="ContenedorNombreZapato col-lg-12">
+                                                                                <h4 class="titillium-web-semibold text-center" id="nombreZapato" >Nike Air Force 1'07</h4>
+                                                                            </div>
+                                                                            <div class="ContenedorColorTalla col-lg-12 d-flex">
+                                                                                <div class="col-lg-6 d-flex mt-3 justify-content-center align-items-center" id="contenedorColor">
+                                                                                    <h6 class="titillium-web-extralight me-1">Color</h6>
+                                                                                    <div id="color" class="mb-2"></div>
+                                                                                </div>
+                                                                                <div class="col-lg-6 d-flex mt-3 justify-content-center align-items-center" id="contenedorTalla">
+                                                                                    <h6 class="titillium-web-extralight me-1">Talla</h6>
+                                                                                    <div id="talla">
+                                                                                        <h6 id="tallaPedido">32</h6>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="contenedorCantidad col-lg-12 justify-content-center align-items-center mt-2">
+                                                                                <h6 class="titillium-web-extralight text-center" id="cantidadPedido">Cantidad: 12</h6>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="card-footer bg-color-4blue">
+                                                                            <div class="d-flex contenedorPrecios col-lg-12">
+                                                                                <div class="col-lg-6 d-flex justify-content-start">
+                                                                                    <h6 class="titillium-web-bold text-white"  id="precioZapato">$120</h6>
+                                                                                </div>
+                                                                                <div class="col-lg-6 d-flex justify-content-end">
+                                                                                    <h6 class="titillium-web-extralight text-white" id="cantidadTotal">Total: $1,440</h6>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         <!-- Detalles del Más Pedido (Body) -->
                                                         <div id="collapseOne" class="accordion-collapse collapse show">
                                                             <div class="accordion-body" id="detallesDeMasPedido">
-                                                                <strong>This is the first item's accordion
-                                                                    body.</strong> It is shown by
-                                                                default,
-                                                                until the collapse plugin adds the appropriate classes
-                                                                that we use to style
-                                                                each
-                                                                element. These classes control the overall appearance,
-                                                                as well as the
-                                                                showing
-                                                                and
-                                                                hiding via CSS transitions. You can modify any of this
-                                                                with custom CSS or
-                                                                overriding
-                                                                our default variables. It's also worth noting that just
-                                                                about any HTML can
-                                                                go
-                                                                within
-                                                                the <code>.accordion-body</code>, though the transition
-                                                                does limit overflow.
+                                                                <div class="col-lg-12">
+                                                                    <div class="container">
+                                                                        <div class="row">
+                                                                            <div class="col-lg-6">
+                                                                                <button type="button" class="btn btn-primary shadow text18 titillium-web-regular bg-color-5blue">Iniciar entrega</button>
+                                                                            </div>
+                                                                            <div class="col-lg-6">
+                                                                                <h6 class="titillium-web-extralight">Total del pedido: $4,310</h6>
+                                                                                <h6 class="titillium-web-extralight">Envío: $10</h6>
+                                                                                <h6 class="titillium-web-extralight">Total a cobrar: $4,320</h6>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>                                                                                                                                                                                                    
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
