--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -66,7 +66,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="rectanguloP1 z-0 position-absolute top-50 start-50 translate-middle ">  
+                    <div class="rectanguloP1 z-0 position-absolute top-50 start-50 translate-middle ">
+                        <div class="DetalleProducto">
+                            <h9 class="PD titillium-web-extralight"> Producto Comentado</h9>
+                            <img src="../../recursos/imagenes/zapato.png " alt="zapatoC" class="zapatoC">  
+                            <p class="DC fw-semi-bold">Nike Dunk Low</p>
+                            <p class="DC1 ">Zapato Unisex</p>
+                            <p class="DC2 ">2 Colores</p>
+                            <p class="DC3 fw-bold">$185</p>
+                        </div>
                         <h3 class="InfoC fw-normal">Información del comentario</h3>
                         <p class="C1 titillium-web-regular">
                             <span class="fw-bold">
@@ -85,15 +93,16 @@
                             </span>
                             1234-5678
                         </p>
-                    <div class ="ComentarioDetalle "> 
-                        <h8 class="CT1 titillium-web-semibold">Descripcion del comentario:</h8>
-                        <p class ="Comentario "> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es muy comodo, lo recomiendo para 
-                            fiestas por que es muy elegante.
-                        </p>
+                        <div class="ComentarioDetalle ">
+                            <h8 class="CT1 titillium-web-semibold">Descripcion del comentario:</h8>
+                            <p class="Comentario "> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
+                                muy comodo, lo recomiendo para
+                                fiestas por que es muy elegante.
+                            </p>  
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
     <footer id="footer"></footer>
 
