--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -36,15 +36,15 @@
             <a>
                 <div class="contenedor d-flex flex-row justify-content-around flex-wrap shadow"
                     onclick="showFormUser()">
-                    <img src="/recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="me-5">
+                    <img src="/recursos/imagenes/icons/UserIconG.svg" width="100px" height="100px" class="me-2">
                     <div class="d-flex flex-column mt-3">
                         <div class="ContenedorTitulo2 position-relative">
                             <h3 class="titillium-web-regular "> Tu perfil </h3>
                             <div class="linea1"></div>
                         </div>
                         <p class="titillium-web-regula mt-2">Aparatado para visualizar tu información y modificarla en
-                            caso un dato este <br>
-                            incorrecto o si requiere una actualización</p>
+                            caso un dato este
+                            incorrecto o si requiere actualización</p>
                     </div>
                 </div>
             </a>
