--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -18,10 +18,10 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-        <!-- *Llamada a las hojas de estilos propios de css -->
-        <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-        <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-        <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
+    <!-- *Llamada a las hojas de estilos propios de css -->
+    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,24 +30,30 @@
     <main id="mainContent">
         <div class="ContenedorT">
             <div class="ItemsContenedorMain shadow-lg">
-                <div class="ContenedorSaludo">
+                <div class="ContenedorSaludo mb-3">
                     <div id="mainTitle" class="text40 "></div>
                 </div>
-                <div class="ContenedorGrafica">
-                    <img src="/recursos/imagenes/Grafica.png" alt="">
+                <div class="ContenedorGrafica row">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <!-- Se muestra un gráfico de ventas-->
+                        <canvas id="chart1"></canvas>
+                    </div>
                 </div>
+                <!-- Importación de la librería para generar los gráficos. Para más información https://www.chartjs.org/ -->
+                <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
             </div>
         </div>
     </main>
     <footer id="footer"></footer>
 
-    <script src="script.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-        <!-- *Llamada al controlador de la página web -->
+    <!-- *Llamada al controlador general de la aplicación -->
+    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
+    <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/panel_principal.js"></script>
