--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -13,15 +13,15 @@
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
     <!-- TODO Llamada al icono de la página web -->
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
-    <!-- *Llamada a las hojas de estilos propios de css -->
-    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/comentarios.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <!-- *Llamada a las hojas de estilos propios de css -->
+    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/comentarios.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,42 +37,44 @@
             <div class="container">
                 <!--div contenedor del texto de comentarios y linea-->
                 <div class="contenidoP">
-                    <div class="rectanguloP z-0 d-none ">
+                    <div class="nav-link rectanguloP z-0" id="rectanguloP">
                         <div class="comentario mt-1">
-                            <div class="ComentarioC">
-                                <a href="dcomentario.html" class="a">
-                                    <h5 class="comentarioT">Emilianito</h5>
-                                    <p class="comentarioD">El mejor pollo, es del pollo campero!
-                                    </p>
-                                </a>
+                            <div class="ComentarioC" data-bs-toggle="tab" id="ComentarioC" role="tab"
+                            data-bs-target="#rectanguloP" aria-controls="rectanguloP" aria-selected="true">
+                            <script>
+                                document.querySelector('.ComentarioC').addEventListener('click', function() {
+                                    ShowComentario(this);
+                                });
+                            </script>
+                                <h5 class="comentarioT">Emilianito</h5>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
                             </div>
                             <div class="sizedbox"></div>
                             <div class="ComentarioC">
                                 <h5 class="comentarioT">Emilianito</h5>
-                                <p class="comentarioD">El mejor pollo, es del pollo campero!
-                                </p>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
                             </div>
                             <div class="sizedbox"></div>
                             <div class="ComentarioC">
                                 <h5 class="comentarioT">Emilianito</h5>
-                                <p class="comentarioD">El mejor pollo, es del pollo campero!
-                                </p>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
                             </div>
                             <div class="sizedbox"></div>
                             <div class="ComentarioC">
                                 <h5 class="comentarioT">Emilianito</h5>
-                                <p class="comentarioD">El mejor pollo, es del pollo campero!
-                                </p>
+                                <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
                             </div>
                         </div>
                     </div>
-                    <div class="rectanguloP1 z-0 position-absolute top-50 start-50 translate-middle ">
+                    <div class="nav-link rectanguloP1 z-0 position-absolute top-50 start-50 translate-middle d-none" id="rectanguloP1"
+                        data-bs-toggle="tab" id="rectanguloP1-tab" role="tab" data-bs-target="#rectanguloP1"
+                        aria-controls="rectanguloP1" aria-selected="true" onclick="ShowComentario(this)">
                         <div class="DetalleProducto">
                             <h9 class="PD titillium-web-extralight"> Producto Comentado</h9>
-                            <img src="../../recursos/imagenes/zapato.png " alt="zapatoC" class="zapatoC">  
+                            <img src="../../recursos/imagenes/zapato.png" alt="zapatoC" class="zapatoC">
                             <p class="DC fw-semi-bold">Nike Dunk Low</p>
-                            <p class="DC1 ">Zapato Unisex</p>
-                            <p class="DC2 ">2 Colores</p>
+                            <p class="DC1">Zapato Unisex</p>
+                            <p class="DC2">2 Colores</p>
                             <p class="DC3 fw-bold">$185</p>
                         </div>
                         <h3 class="InfoC fw-normal">Información del comentario</h3>
@@ -95,14 +97,18 @@
                         </p>
                         <div class="ComentarioDetalle ">
                             <h8 class="CT1 titillium-web-semibold">Descripcion del comentario:</h8>
-                            <p class="Comentario "> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
+                            <p class="Comentario"> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
                                 muy comodo, lo recomiendo para
                                 fiestas por que es muy elegante.
-                            </p>  
+                            </p>
+                            <div class="contenedor-boton">
+                                <button type="button" class="btn btn-primary">Retirar comentario</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
     <footer id="footer"></footer>
 
