--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -50,7 +50,7 @@
             </a>
 
             <div class="contenedor d-flex flex-column justify-content-center flex-wrap shadow mt-4 ms-auto">
-                <a href="/vistas/privado/index.html">
+                <a onclick="logOut()">
                     <div class="ContenedorTitulo position-relative">
                         <h5 class="titillium-web-regular"> Cerrar sesión </h5>
                         <div class="linea1"></div>
@@ -60,19 +60,89 @@
         </div>
 
         <div class="d-none" id="formDiv">
-            <h1>Formulario de usuario</h1>
+            <div class="contenedorTotalForm d-flex flex-column justify-content-center align-items-center flex-wrap p-5">
+                <div class="contenedorCabecera d-flex flex-row align-items-center flex-wrap mb-2">
+                    <div class="contenedorImg">
+                        <img src="/recursos/imagenes/icons/Account.svg" width="150px" height="150px">
+                    </div>
+                    <div class="contenedorInfo d-flex flex-column ms-4">
+                        <div class="contenedorNombre">
+                            <h3 class="titillium-web-regular"> Emiliano Ano de Anito </h3>
+                        </div>
+                        <div class="contenedorCorreo position-relative">
+                            <h6 class="titillium-web-extralight">emilianoanito@gmail.com.sv</h6>
+                            <div class="linea1"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="contenedorForm d-flex flex-column">
+                    <form class="row needs-validation form1 position-relative" novalidate>
+                        <div class="col-md-6">
+                            <label for="nombreInput" class="form-label">Nombres</label>
+                            <input type="text" class="form-control" id="nombreInput" required readonly
+                            value="Emiliano ano">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="apellidosInput" class="form-label ">Apellidos</label>
+                            <input type="text" class="form-control" id="apellidosInput" required readonly
+                            value="de anito">
+                        </div>
+                        <div class="col-md-6 mt-3">
+                            <label for="duiInput" class="form-label ">DUI</label>
+                            <input type="text" class="form-control" id="duiInput" required readonly
+                            value="12345678-9">
+                        </div>
+                        <div class="col-md-6 mt-3">
+                            <label for="telefonoInput" class="form-label ">Teléfono</label>
+                            <input type="text" class="form-control" id="telefonoInput" required readonly
+                            value="1234-5678">
+                        </div>
+                        <div class="col-md-6 mt-3">
+                            <label for="correoInput" class="form-label ">Correo Electronico</label>
+                            <input type="text" class="form-control" id="correoInput" required readonly
+                            value="emilianoanito@gmail.com.sv">
+                        </div>
+                        <div class="col-md-6 mt-3">
+                            <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
+                            <input type="text" class="form-control" id="fechanInput" required readonly
+                            value="07/07/2001">
+                        </div>
+                        <div class="col-md-6 mt-3">
+                            <label for="contraInput" class="form-label ">Contraseña</label>
+                            <input type="text" class="form-control" id="contraInput" required readonly
+                            value="**********">
+                        </div>
+
+                        <div class="col-md-6 mt-3">
+                            <label for="contraCInput" class="form-label ">Confirmar Contraseña</label>
+                            <input type="text" class="form-control" id="contraCInput" required readonly
+                            value="**********">
+                        </div>
+
+                        <div class="contenedorBotones2">
+                            <button type="button" onclick="returnBack()"
+                                class="btn btn2 btn-primary ms-2 shadow text18 titillium-web-regular">Regresar</button>
+                            <button class="btn btn3 btn-primary shadow ms-5 text18 titillium-web-regular" id="btnUpdate"
+                                onclick="addSave()" type="button">Actualizar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
     <footer id="footer"></footer>
 
-    <script src="script.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <!--*Libreria de mensajes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/detalles_usuario.js"></script>
 </body>
